----
QWEX v0.169 Beta DEVELOP
[server]
- commands admin and judge unbanned (be sure to use fixed ktpro!)
- bug with wrong names for tmp recording fixed
- bug that allowed players to have null names fixed

----
QWEX v0.168 Beta DEVELOP
[server]
- change: sv_getrealip  0/1/2:
  0 - real ip is not checked
  1 - server tries to check ip for 5 sec. on failure, client is connected anyway (real ip is unknown)
  2 - server tries to check ip for 5 sec, on failure, client is dropped.
- fix: banned clients won't connect via proxy (unless realip check fails)
- new (MOD stuff): server seeks for localinfoChanged function, if it exists, will be executed everytime
  locainfo changes. Format: void(string key, string oldvalue, string newvalue) localinfoChanged
- new cvar: sv_DemoExtraNames 0/1, if enabled, demo names contains player names instead of team names
  I/E: dag_pietro_vs_insane_balt, insead of la_vs_hgc.
- change: logs contains more info now
- change: userinfo modified, only important info is sent to other clients (like top/bottomcolor, team name)
- ktpro commands 'cmd admin' and 'cmd judge' banned due to the serious bug concerning these commands


----
QWEX v0.165 Beta DEVELOP
[server]
- windows version is now a win32 application (nice window instead of msdos console)
- win32: param -noerrormsgbox will exit program after an error w/o showing error message box
  usefull if run run server in the loop.
- win32: param -minimize starts server minimized to system tray
- few minor changes/bugfixes

----
QWEX v0.163 Beta DEVELOP
[server]
- small change to script command
  $name works as @name though it will be cleaned out of unreadable characters

----
QWEX v0.162 Beta DEVELOP
[server]
- small changes 
  sv_maxdownloadrate determines maximum for clients that download files (if set sv_maxrate is ignored)
  if userinfo drate is found it is used for setting rate when downloading
  after download is finished rate is changed back to its previous value

----
QWEX v0.161 Beta DEVELOP